fix overlay scrollbar

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -5,9 +5,11 @@
 
 .navigation ul {
   list-style: none;
-  display: flex;
-  align-items: center;
   height: var(--nav-height);
+}
+
+.navigation ul li {
+  float: left;
 }
 
 .navigation ul li a {
@@ -33,7 +35,7 @@
 }
 
 .navigation ul li:last-child {
-  position: absolute;
+  float: right;
   width: 5rem;
   height: 5rem;
   background-color: rgb(59, 57, 57);
@@ -41,7 +43,7 @@
   top: 0;
   right: -2.5rem;
   top: -2.5rem;
-  transform: rotate(45deg);
+  transform: rotate(45deg) translate(0, -70%);
   transition: transform 0.4s ease-out;
 }
 
@@ -57,5 +59,5 @@
 }
 
 .navigation ul li:last-child:hover {
-  transform: rotate(45deg) scale(1.2);
+  transform: rotate(45deg) translate(0, -70%) scale(1.2);
 }
